# neon-eds

./: Makefile.am  README.md  README.rst  configure.ac
base/: README.md
base/include/port/: core.h
base/include/shared/: component.h  error.h  list.h
doc/: doxyfile-base  doxyfile-bitop  doxyfile-dbg  doxyfile-mem
doc/example/: dmem_two_buffs.c  pmem_init3.c  pmem_two_buffs.c
doc/src/: mem.dox
documentation/: doxyfile  doxyfile_eds
documentation/base/: doxyfile-critical  doxyfile-generic
documentation/base/example/: dmem_init1.c  dmem_init2.c  pmem_init1.c  pmem_init2.c
documentation/base/pages/: template.dox
documentation/src/: mem.dox
documentation/template/: header_template.h  source_template.res
inc/base/: base.h  bitop.h  critical.h  dbg.h  dbg_cfg.h  debug.h  debug_config.h  error.h  heap_mem.h  list.h  mem.h  pool_mem.h  prio_queue.h  prio_queue_config.h  queue.h  static_mem.h  string.h
inc/eds/: epa.h  epa_config.h  event.h  event_config.h  smp.h  smp_config.h
include/: eds_base.h  eds_ep.h  eds_mm.h  eds_port.h  eds_sched.h  eds_timer.h  event_driven_system.h  nbase_config.h  nbias_list.h  neon_eds.h  nerror.h  ngpio.h  ni2c.h  nport.h  nprio_queue.h  nsystimer.h  nuart.h
include/base/: bias_list.h  bitop.h  component.h  config.h  debug.h  dlist.h  error.h  list.h  natomic.h  nbase_config.h  ndebug.h  nlist.h  queue.h
include/eds/: epa.h  equeue.h  etimer.h  event.h  event_config.h  smp.h
include/ep/: .epa.h.swp  epa.h  equeue.h  etimer.h  event.h  smp.h
include/mm/: heap.h  mem.h  pool.h  static.h  stdheap.h
include/object/: obj.h
include/port/: atomic.h  compiler.h  core.h  cpu.h  gpio.h  i2c.h  isr.h  os.h  peripheral.h  profile.h  sys_lock.h  systimer.h  uart.h
include/sched/: deferred.h  prio_queue.h  sched.h
include/shared/: bias_list.h  component.h  config.h  debug.h  error.h  queue.h
include/timer/: timer.h
port/pic32-none-gcc/: p_core.c
port/stm32f4xx-hal-gcc/: p_core.c
port/stm32f4xx-none-arm/: p_core.c
port/stm32f4xx-none-gcc/: p_core.c  stm32f1xx_core.c  stm32f4xx_core.c
port/x86-64-linux-gcc/: cpu.c  neon_eds_app_config.h  p_core.c  systimer.c
source/: .epa.c.swp  Makefile.am  base.c  debug.c  deferred.c  epa.c  equeue.c  error.c  etimer.c  event.c  heap.c  mem.c  obj.c  pool.c  port.c  sched.c  smp.c  static.c  stdheap.c  timer.c
src/: base.c  dbg.c  debug.c  epa.c  error.c  event.c  heap_mem.c  mem.c  pool_mem.c  prio_queue.c  smp.c  static_mem.c  string.c
template/generic/: dbg_cfg.h
(+142 files in other folders)
